Fix intrinsic size on mobile
Increase the intrinsic size on mobile.

--- a/src/components/molecules/previewCard/_index.scss
+++ b/src/components/molecules/previewCard/_index.scss
@@ -5,7 +5,11 @@
   grid-template-rows: auto auto;
   grid-template-columns: 64px calc(100% - 64px);
   content-visibility: auto;
-  contain-intrinsic-size: 144px;
+  contain-intrinsic-size: 240px;
+
+  @media screen and (min-width: $layout-medium-breakpoint) {
+    contain-intrinsic-size: 144px;
+  }
 
   .card-title {
     a {
